<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_clap_Yourself"
        android:checked="true"
        android:icon="@drawable/ic_action_cam"
        android:title="@string/title_clap_yourself" />

    <item
        android:id="@+id/navigation_shows"
        android:icon="@drawable/ic_action_cal"
        android:title="@string/title_shows" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_action_music"
        android:title="@string/title_music" />
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_action_youtube"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_action_shirt"
        android:title="@string/title_shop" />
</menu>
